--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t dev-image -f Dockerfile.dev
+  - docker build -t dev-image -f Dockerfile.dev .
 
 script:
   - docker run dev-image npm run test -- --coverage
